third_party/move/move-compiler-v2/tests/checking/naming/global_builtin_zero_type_arguments.exp

Diagnostics:
error: expected 1 type argument but 0 were provided
  ┌─ tests/checking/naming/global_builtin_zero_type_arguments.move:4:9
  │
4 │         borrow_global<>(@0x1);
  │         ^^^^^^^^^^^^^^^^^^^^^

error: expected 1 type argument but 0 were provided
  ┌─ tests/checking/naming/global_builtin_zero_type_arguments.move:5:9
  │
5 │         exists<>(@0x1);
  │         ^^^^^^^^^^^^^^

error: expected 1 type argument but 0 were provided
  ┌─ tests/checking/naming/global_builtin_zero_type_arguments.move:6:17
  │
6 │         R1 {} = move_from<>(@0x1);
  │                 ^^^^^^^^^^^^^^^^^

error: expected 1 type argument but 0 were provided
  ┌─ tests/checking/naming/global_builtin_zero_type_arguments.move:7:9
  │
7 │         move_to<>(account, R1{});
  │         ^^^^^^^^^^^^^^^^^^^^^^^^
